--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="koala_yellow">#ffffd25d</color>
+    <color name="koala_black">#ff222222</color>
+    <color name="koala_gray">#ff999999</color>
 </resources>
