--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,14 +2,16 @@
     <!-- Base application theme. -->
     <style name="Theme.Koala" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/koala_black</item>
-        <item name="colorPrimaryVariant">@color/koala_gray</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/white</item>
+        <item name="colorOnPrimary">@color/koala_black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/koala_yellow</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/koala_black</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorOnError">@color/koala_yellow</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:navigationBarColor">@color/koala_black</item>
         <!-- Customize your theme here. -->
     </style>
 
